--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,4 @@
 {
-    "workbench.colorCustomizations": {
-        "activityBar.background": "#744146",
-        "titleBar.activeBackground": "#744146",
-        "titleBar.activeForeground": "#FBFAFA"
-    },
+    "workbench.colorCustomizations": {},
     "peacock.color": "#532f32"
 }
